// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Icon Snapshot using custom props 1`] = `
<div
  className="jsx-994160201 icon"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-coffee fa-w-20 fa-spin fa-lg "
    color="#000000"
    data-icon="coffee"
    data-prefix="fas"
    height="18px"
    role="img"
    style={
      Object {
        "height": "100%",
        "transformOrigin": "0.375em 0.5em",
        "width": "100%",
      }
    }
    styles={Object {}}
    viewBox="0 0 640 512"
    width="18px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      style={Object {}}
      transform="translate(320 256)"
    >
      <g
        style={Object {}}
        transform="translate(-128, 0)  scale(0.625, 0.625)  rotate(0 0 0)"
      >
        <path
          d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
          fill="currentColor"
          style={Object {}}
          transform="translate(-320 -256)"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Component Icon Snapshot without arguments, take the default values 1`] = `
<div
  className="jsx-994160201 icon"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-coffee fa-w-20 fa-lg "
    color="#000000"
    data-icon="coffee"
    data-prefix="fas"
    height="18px"
    role="img"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
    styles={Object {}}
    viewBox="0 0 640 512"
    width="18px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;
